--- a/package.json
+++ b/package.json
@@ -1,13 +1,12 @@
 {
   "name": "static-tagged-union",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "Static Tagged Union",
   "main": "dist/static-tagged-union.js",
   "scripts": {
     "start": "rollup -c",
     "watch": "rollup -c -w",
-    "test": "tead",
-    "test-watch": "tead --watch"
+    "test": "jest --config jestconfig.json"
   },
   "repository": {
     "type": "git",
@@ -26,13 +25,16 @@
   },
   "homepage": "https://github.com/foxdonut/static-tagged-union#readme",
   "devDependencies": {
-    "buble": "^0.20.0",
-    "eslint": "^6.8.0",
-    "rollup": "^2.6.1",
-    "rollup-plugin-buble": "^0.19.8",
-    "rollup-plugin-commonjs": "^10.1.0",
-    "rollup-plugin-node-resolve": "^5.2.0",
-    "rollup-plugin-uglify": "^6.0.4",
-    "tead": "^0.5.3"
+    "@babel/core": "^7.22.9",
+    "@babel/preset-env": "^7.22.9",
+    "@rollup/plugin-babel": "^6.0.3",
+    "@rollup/plugin-commonjs": "^25.0.3",
+    "@rollup/plugin-node-resolve": "^15.1.0",
+    "@rollup/plugin-terser": "^0.4.3",
+    "eslint": "^8.45.0",
+    "eslint-config-foxdonut": "^2.1.0",
+    "eslint-plugin-jest": "^27.2.3",
+    "jest": "^29.6.1",
+    "rollup": "^3.26.3"
   }
 }
